<resources>

    <string name="app_name">Smart Shop</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="settings">Settings</string>
    <string name="title_activity_tabbed">Tabbed Activity</string>
    <!--<string name="section_format">Hello World from section: %1$d</string>-->
    <string name="section_format">%1$d</string>

    <string name="favourites">Favourites</string>
    <string name="share">Share</string>
    <string name="help">About and Help</string>
    <string name="rate">Rate</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_offers">"Offers"</string>
    <string name="title_activity_pdf_viewer">"Offer Pages"</string>

    <string name="saved_favorite">saved favorit</string>
    <string name="title_activity_favorite">Favorites</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="title_activity_setting">Setting</string>
    <string name="title_activity_help">About and Help</string>


    <string name="help1">Version <b>2.2</b> \n \n  Developed and Designed By : Smart Shop Technical Team</string>
    <string name="help2">To contact with developer team you can use the following E-mail </string>
    <string name="help3">For support and feedBack ,Please connect us on  </string>
    <string name="help4">applefish.team@gmail.com</string>
    <string name="help5">Thank you for using our app </string>
    <string name="help6">supp.smartshop@gmail.com</string>

    <string name="saved_setting_push">saved setting push</string>
    <string name="saved_setting_sound">saved setting sound</string>
    <string name="saved_setting_vibrate">saved setting vibrate</string>
    <string name="search_hint">Search here</string>
    <string name="title_activity_search_agent">Search</string>
    <string name="share_text"> DownLoad Smart Shopp UAE Android is an app to know before go Shopping .Market url: play.google.com/store/apps/details?id=com.applefish.smartshop </string>

    <array name="Category">
        <item>cat1</item>
        <item>cat2</item>
        <item>cat3</item>
        <item>cat4</item>
        <item>cat5</item>
        <item>cat6</item>
        <item>cat7</item>
        <item>cat8</item>
        <item>cat9</item>
        <item>cat10</item>
        <item>cat11</item>
        <item>cat12</item>
    </array>
    <array name="item1">
        <item>cat1 item1</item>
        <item>cat1 item2</item>
        <item>cat1 item3</item>
        <item>all</item>
    </array>
    <array name="item2">
        <item>cat2 item1</item>
        <item>cat2 item2</item>
        <item>cat2 item3</item>
        <item>cat2 item4</item>
        <item>all</item>
    </array>
    <array name="item3">
        <item>cat3 item1</item>
        <item>cat3 item2</item>
        <item>cat3 item3</item>
        <item>cat3 item4</item>
        <item>all</item>
    </array>
    <array name="item4">
        <item>cat4 item1</item>
        <item>cat4 item2</item>
        <item>cat4 item3</item>
        <item>cat4 item4</item>
        <item>all</item>
    </array>
    <array name="item5">
        <item>cat5 item1</item>
        <item>cat5 item2</item>
        <item>cat5 item3</item>
        <item>cat5 item4</item>
        <item>all</item>
    </array>
    <array name="item6">
        <item>cat6 item1</item>
        <item>cat6 item2</item>
        <item>cat6 item3</item>
        <item>cat6 item4</item>
        <item>all</item>
    </array>
    <array name="item7">
        <item>cat7 item1</item>
        <item>cat7 item2</item>
        <item>cat7 item3</item>
        <item>cat7 item4</item>
        <item>all</item>
    </array>
    <array name="item8">
        <item>cat8 item1</item>
        <item>cat8 item2</item>
        <item>cat8 item3</item>
        <item>cat8 item4</item>
        <item>all</item>
    </array>
    <array name="item9">
        <item>cat9 item1</item>
        <item>cat9 item2</item>
        <item>cat9 item3</item>
        <item>cat9 item4</item>
        <item>all</item>
    </array>
    <array name="item10">
        <item>cat10 item1</item>
        <item>cat10 item2</item>
        <item>cat10 item3</item>
        <item>cat10 item4</item>
        <item>all</item>
    </array>
    <array name="item11">
        <item>cat11 item1</item>
        <item>cat11 item2</item>
        <item>cat11 item3</item>
        <item>cat11 item4</item>
        <item>all</item>
    </array>
    <array name="item12">
        <item>cat12 item1</item>
        <item>cat12 item2</item>
        <item>cat12 item3</item>
        <item>cat12 item4</item>
        <item>all</item>
    </array>
    <string name="title_activity_images_viewer">Offer Pages</string>
    <string name="view_more">...view more</string>
    <string name="view_less">...view less</string>

</resources>
