<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group  android:id="@+id/grp1">
        <item
            android:id="@+id/nav_favourites"
            android:icon="@drawable/golden_star2"
            android:title="@string/favourites" />
    </group>
    <group  android:id="@+id/grp2">
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/share" />
    </group>
    <group  android:id="@+id/grp3">
        <item
            android:id="@+id/nav_help"
            android:icon="@android:drawable/ic_menu_help"
            android:title="@string/help" />
    </group>
    <group  android:id="@+id/grp4">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_action_settings"
            android:title="@string/settings" />

    </group>
    <group  android:id="@+id/grp5">
        <item
            android:id="@+id/nav_rate"
            android:icon="@android:drawable/ic_menu_edit"
            android:title="@string/rate" />
    </group>



</menu>
