<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_help"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/customborder"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.applefish.smartshopsyria.activities.HelpActivity"
    tools:showIn="@layout/activity_help"
    android:weightSum="1"

    android:orientation="vertical">
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:scaleType="center"
        android:contentDescription="icon"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/logo192"
        android:layout_margin="5dp"
        android:layout_weight="0" />
    <TextView
        android:text="Smart Shop UAE App "
        android:layout_width="match_parent"
        android:textStyle="bold"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Display1"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/colorPrimary"
        android:id="@+id/textView1"
        android:layout_weight="0.08"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#c0c0c0"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:id="@+id/view2" />

    <TextView
        android:text="@string/help1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textColor="#000000"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
        android:gravity="center"
        android:id="@+id/textView2"
        android:layout_weight="0.25"
        />


    <!--<TextView-->
        <!--android:text="@string/help2"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="0dp"-->
        <!--android:textColor="@color/colorPrimary"-->
        <!--android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"-->

        <!--android:gravity="center"-->
        <!--android:id="@+id/textView6"-->
        <!--android:layout_weight="0.10"-->
        <!--/>-->
    <!--<TextView-->
        <!--android:text="@string/help4"-->
        <!--android:layout_width="match_parent"-->
        <!--android:textColor="#FFFFFF"-->
        <!--android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"-->
        <!--android:layout_height="0dp"-->
        <!--android:gravity="center"-->
        <!--android:id="@+id/textView7"-->
        <!--android:layout_weight="0.07"-->
<!--android:textStyle="bold"-->
        <!--android:autoLink="email"/>-->
    <TextView
        android:text="@string/help3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textColor="#000000"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"

        android:gravity="center"
        android:id="@+id/textView3"
        android:layout_weight="0.1"
        />

    <TextView
        android:text="@string/help6"
        android:layout_width="match_parent"
        android:textColor="#FFFFFF"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
        android:layout_height="0dp"
        android:gravity="center"
        android:id="@+id/textView4"
        android:layout_weight="0.1"
        android:textStyle="bold"
        android:autoLink="email"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#c0c0c0"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:id="@+id/view" />

    <TextView
        android:text="@string/help5"
        android:layout_width="match_parent"
        android:textColor="#c8c8c8"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:layout_height="0dp"
        android:gravity="center"
        android:textStyle="bold"
        android:id="@+id/textView5"
        android:layout_weight="0.12"/>
</LinearLayout>
